Cormorant font; fix large curly brackets

--- a/shared/algebra.tex
+++ b/shared/algebra.tex
@@ -139,7 +139,7 @@ where
 Example:
 
 The \textit{\gls{Integers}}: 
-$\glssymbol{Integers} = \{\cdots, -2, -1, 0, 1, 2, \cdots\}$.
+$\glssymbol{Integers} = \left\{\cdots, -2, -1, 0, 1, 2, \cdots\right\}$.
 
 \end{plSection}
 %-----------------------------------------------------------------
