--- a/shared/annoyances.tex
+++ b/shared/annoyances.tex
@@ -21,8 +21,8 @@ BigDecimal.valueOf(x).doubleValue() != x.
 \lstset{language=Clojure}
 
 Standard math notation: 
-enumerated finite set: $\Set{S} = \{0, 1, 2\}$ 
-and cardinality $\#\{0, 1, 2\}
+enumerated finite set: $\Set{S} = \left\{0, 1, 2\right\}$ 
+and cardinality $\#\left\{0, 1, 2\right\}
 \rightarrow 3$.
 
 \lstinline|#{0 1 2}| $\rightarrow$ \lstinline|java.util.Set|
