--- a/shared/image-fitting.tex
+++ b/shared/image-fitting.tex
@@ -54,7 +54,7 @@ based on projection:
 \end{plDiagram}
 
 Suppose we have a polygon, $\Set{P}$, consisting of a set of vertices,
-$\{\Simplex{v}_i\}$, and consistently directed edges $\{\Simplex{e}_{i,i+1}:(\Simplex{v}_i,\Simplex{v}_{i+1})\}$.
+$\left\{\Simplex{v}_i\right\}$, and consistently directed edges $\left\{\Simplex{e}_{i,i+1}:(\Simplex{v}_i,\Simplex{v}_{i+1})\right\}$.
 To determine whether a point $\Vector{p}$ is inside or outside,
 find the projection of (the closest point to) $\Vector{p}$ on the polygon.
 If the projection is on a convex vertex (see \ref{diagram:ConvexVertex}),
