--- a/shared/logic.tex
+++ b/shared/logic.tex
@@ -146,7 +146,7 @@ First-order (aka predicate) logic.~\citeAuthorTitle{wiki:FirstOrderLogic,
 sep:EmergenceOfFirstOrderLOgic}
 
 \begin{description}
-\item[Truth values] Usually $\{\mathsf{true},\mathsf{false}\}$,
+\item[Truth values] Usually $\left\{\mathsf{true},\mathsf{false}\right\}$,
 but more than $2$ values is possible.
 \item[Domain of discourse] A set $\Set{D}$.
 \item[Constants] $A,B,C, \ldots$ names for values in the
