--- a/shared/mesh-operations.tex
+++ b/shared/mesh-operations.tex
@@ -21,7 +21,7 @@ Let $\Simplex{t}$ be an $n$-simplex that contains $\Simplex{s}$.
 Let $\Simplex{r}$ be the $(n-d-1)$-simplex opposite $\Simplex{s}$
 in $\Simplex{t}$.
 (If $\Simplex{t} = \Simplex{s}$, then $\Simplex{r}$ is the empty set.)
-Let $\{ \Facet{f}_0 \ldots \Facet{f}_d \}$ be the
+Let $\left\{ \Facet{f}_0 \ldots \Facet{f}_d \right\}$ be the
 d $(d-1)$-simplex facets of $\Simplex{s}$.
 $\SimplicialComplex{K}_1$ has
 $d$ $n$-simplices formed from
