--- a/shared/numbers.tex
+++ b/shared/numbers.tex
@@ -152,7 +152,7 @@ solve $a = b + c$ for $c$.
 
 The \textit{\gls{Integers}}: 
 
-$\glssymbol{Integers} = \{\cdots, -2, -1, 0, 1, 2, \cdots\}$.
+$\glssymbol{Integers} = \left\{\cdots, -2, -1, 0, 1, 2, \cdots\right\}$.
 
 A ring (sec~\ref{sec:Ring}).
 %-----------------------------------------------------------------
@@ -279,15 +279,15 @@ forms a proper subfield of the domain.
 The domain itself will be a field 
 if we impose upon it the first-order field axioms. 
 Hence, 
-$ \{ \text{First-order field axioms} \} 
+$ \left\{ \text{First-order field axioms} \right\} 
 \cup 
-\{ \text{First-order axioms defining characteristic $ 0 $} \}
+\left\{ \text{First-order axioms defining characteristic $ 0 $} \right\}
  \cup
-\{ \neg (\exists P)(\Phi^{P}_{1} 
+\left\{ \neg (\exists P)(\Phi^{P}_{1} 
 ~ \land ~ \Phi^{P}_{2} ~ \land ~ 
 \Phi^{P}_{3} ~ \land ~ 
 \Phi^{P}_{4} ~ \land ~ 
-\Phi^{P}_{5} ~ \land ~ \Phi^{P}_{6}) \} $
+\Phi^{P}_{5} ~ \land ~ \Phi^{P}_{6}) \right\} $
 is a set of first- and second-order axioms that characterizes
 $ \Space{Q} $ uniquely because of the following two reasons:
 
@@ -316,7 +316,7 @@ as a subset of
 Alternative 'axiomatic' characterization
 might be possible by starting from axiomatic definition of
 $\Space{R}$ and defining $\Space{Q}$ as a certain subset.
-\end{plSection}{\texorpdfstring{$\Space{Q}$}{Q} as a subset of \texorpdfstring{$\Space{R}$}{R}}
+\end{plSection}%{\texorpdfstring{$\Space{Q}$}{Q} as a subset of \texorpdfstring{$\Space{R}$}{R}}
 %-----------------------------------------------------------------
 \begin{plSection}{Equivalence classes of integer pairs}
 \label{sec:Equivalence_classes_of_integer_pairs}
@@ -345,7 +345,7 @@ $\Space{Q} =
 Generalized floating point.
 
 Subset of $\Space{Q}$:
-$\{t \ast b^n$; $b\,\in\,\Space{N};\; t,n\,\in\,\Space{Z}\}$.
+$\SetSpec{t \ast b^n}{ b\,\in\,\Space{N};\; t,n\,\in\,\Space{Z}}$.
 
 Most often $b=2$; 
 next most often, $b=10$;
