--- a/shared/registration.tex
+++ b/shared/registration.tex
@@ -26,10 +26,10 @@ where $\Vector{v} = (\Vector{v}_0, \ldots , \Vector{v}_{n-1})$
 are the positions of the vertices of $\Set{M}$.
 
 We are also sometimes interested in registering a data set
-$\Vector{x}_i\}$ to a mesh.
+$\left\{ \Vector{x}_i \right\}$ to a mesh.
 In this case, we minimize
 \begin{equation}
-\min_{\Vector{T}} d(\Set{M},\Vector{T}\{\Vector{x}_i\})
+\min_{\Vector{T}} d(\Set{M},\Vector{T}\left\{\Vector{x}_i\right\})
 \end{equation}
 
 Both are special cases of choosing a transform on $\Reals^{3n}$
@@ -106,7 +106,7 @@ of $\Set{M}$ are given in \cref{sec:data-fitting}.
 \label{sec:Transforms}
 
 In this section, I describe common families
-of transforms, $\{\Vector{T}\}$, over which to minimize:
+of transforms, $\left\{\Vector{T}\right\}$, over which to minimize:
 \begin{equation}
 \min_{\Vector{T}} f( \Vector{T} \Vector{p}),
 \end{equation}
