--- a/shared/volume.tex
+++ b/shared/volume.tex
@@ -8,7 +8,7 @@ This section describes how to compute
 the volume of a $m$-simplex in $\Reals^n$ (with $m \le n$)
 and its derivatives with respect to the vertex positions.
 In what follows, let $\Simplex{S}$ be the geometric $m$-simplex
-spanned by the $m+1$ points $\{\Point{p}_0 , \ldots , \Point{p}_m\}$,
+spanned by the $m+1$ points $\left\{\Point{p}_0 , \ldots , \Point{p}_m\right\}$,
 where $\Point{p}_i \in \Reals^n$.
 As in \cref{sec:barycentric-coordinates},
 let $\Vector{v}_i = (\Point{p}_i - \Point{p}_m); i = 0 \ldots (m-1)$
