--- a/tests/chunks.tex
+++ b/tests/chunks.tex
@@ -169,7 +169,7 @@ defined so that for all $y\in\Set{B}$ there exist $x \in \Set{A}$
 such that $y=F_P(x)$.
 (Something backwards about this.)
 
-$\Set{B}\,=\,F_p(\Set{A}) \,=\, \{F_p(x) : x \in \Set{A}\}$ 
+$\Set{B}\,=\,F_p(\Set{A}) \,=\, \left\{F_p(x) : x \in \Set{A}\right\}$ 
 is the \textsl{image} of $\Set{A}$ under $F_p$.
 
 Principle of smallness: if $\Set{A}$ is 
@@ -324,7 +324,7 @@ $\Vector{v} \in \Space{V}$.
 Suppose $\Space{V}$ is a linear space and
 $\Vector{v}_0, \ldots , \Vector{v}_{n-1} \in \Space{V}$.
 If there exists $a_0, \ldots , a_{n-1}$ such that
-$\Vector{0} = \sum a_i \Vector{v}_i$ then the $\{ \Vector{v}_i \}$
+$\Vector{0} = \sum a_i \Vector{v}_i$ then the $\left\{ \Vector{v}_i \right\}$
 are \textit{linearly dependent}.
 \cite[section~5]{Halmos:1958:Finite}
 
