--- a/shared/functions.tex
+++ b/shared/functions.tex
@@ -98,7 +98,7 @@ defined by $f_1(x) = f_0(x)$
 the same function as $f_0$?
 
 We will also frequently encounter the notion of the 
-\textit{support} of a function, which is less consisntently
+\textit{support} of a function, which is less consistently
 defined. In general, the support is a subset of the domain
 where the function takes on some non-trivial value, for example,
 where a numerically valued function is non-zero, or sometimes,
@@ -119,8 +119,8 @@ functions with domain $\Set{D}$ and codomain $\Set{C}.$
 \begin{plSection}{Equivalence classes and quotient sets}
 
 If $\Set{E}$ is an equivalence relation on $\Set{S}^2$, then we
-can define the \textit{equivalence class} of $s_0$, $E(s_0) = \{
-\SetSpec{s_1 \in \Set{S}}{[s_0 \, s_1] \in \Set{E} }$.
+can define the \textit{equivalence class} of $s_0$, 
+$E(s_0) = \SetSpec{s_1 \in \Set{S}}{[s_0 \, s_1] \in \Set{E} }$.
 The set of distinct equivalence classes partitions $\Set{S}$,
 and is called the \textit{quotient set}: $\Set{S} / \Set{E}$.
 
