--- a/shared/spaces.tex
+++ b/shared/spaces.tex
@@ -119,7 +119,7 @@ $\Vector{v} \in \Space{V}$.
 Suppose $\Space{V}$ is a linear space and
 $\Vector{v}_0, \ldots , \Vector{v}_{n-1} \in \Space{V}$.
 If there exists $a_0, \ldots , a_{n-1}$ such that
-$\Vector{0} = \sum a_i \Vector{v}_i$ then the $\{ \Vector{v}_i \}$
+$\Vector{0} = \sum a_i \Vector{v}_i$ then the $\left\{ \Vector{v}_i \right\}$
 are \textit{linearly dependent}.
 \citeAuthorYearTitle[section~5]{Halmos:1958:Finite}
 
@@ -195,8 +195,8 @@ Where $\Space{K}$ is any field.
 %\leavevmode \vspace{-\baselineskip}
 \begin{itemize}
   \item vectors:
-  $\Set{V} = \Space{K}^n = \{ \Vector{x}
-  = \left[ x_0, \ldots , x_{n-1} \right] \}$,
+  $\Set{V} = \Space{K}^n = \left\{ \Vector{x}
+  = \left[ x_0, \ldots , x_{n-1} \right] \right\}$,
   tuples of $n$ elements $x_i \in \Space{K}$.
   \item scalars: $\Space{K}$
   \item scalar multiplication:
@@ -209,14 +209,17 @@ Where $\Space{K}$ is any field.
 \end{plExample}
 
 \begin{plExample}{$\Space{R}^n$}{}
+\vspace{\topsep}
+\setlength{\parskip}{5pt}
+\setlength{\parindent}{0pt}
 See 
 \citeAuthorYearTitle[chapter~1]{Spivak:1965:CalculusOnManifolds} 
 and \citeAuthorYearTitle[chapter~1]{Halmos:1958:Finite}.
 %\leavevmode \vspace{-\baselineskip}
 \begin{itemize}
   \item vectors:
-  $\Set{V} = \Space{R}^n = \{ \Vector{x}
-  = \left[ x_0, \ldots , x_{n-1} \right] \}$,
+  $\Set{V} = \Space{R}^n = \left\{ \Vector{x}
+  = \left[ x_0, \ldots , x_{n-1} \right] \right\}$,
   tuples of $n$ elements $x_i \in \Space{R}$.
   \item scalars: $\Space{R}$
   \item scalar multiplication:
@@ -283,12 +286,12 @@ $\Vector{f}\left( d \right) \; \forall d \in \Set{D}$
 %\bigskip
 We can identify \citeAuthorYearTitle[sec.~24]{Halmos:1958:Finite} 
 $\Space{R}^n$ and 
-$ \Space{F} \left[ \{ 0, 1, \ldots, {n-1} \}, \Space{R} \right] $
+$ \Space{F} \left[ \left\{ 0, 1, \ldots, {n-1} \right\}, \Space{R} \right] $
 by
 $\Vector{x} \Leftrightarrow f_{\Vector{x}}$
 where $f_{\Vector{x}} \left( i \right) = \Vector{x}_i$
 for $\Vector{x} \in \Space{R}^n$ and 
-$i \in \{ 0, 1, \ldots, {n-1} \}$
+$i \in \left\{ 0, 1, \ldots, {n-1} \right\}$
 \end{plExample}
 
 %-----------------------------------------------------------------
@@ -296,7 +299,7 @@ $i \in \{ 0, 1, \ldots, {n-1} \}$
 Suppose $\Space{V}$ is a linear space and
 $\Vector{v}_0, \ldots , \Vector{v}_{n-1} \in \Space{V}$.
 If there exists $a_0, \ldots , a_{n-1}$ such that
-$\Vector{0} = \sum a_i \Vector{v}_i$ then the $\{ \Vector{v}_i \}$
+$\Vector{0} = \sum a_i \Vector{v}_i$ then the $\left\{ \Vector{v}_i \right\}$
 are \textit{linearly dependent}.
 \citeAuthorYearTitle[section~5]{Halmos:1958:Finite}
 
@@ -335,14 +338,13 @@ which implies that
 A subset which is also a linear space with the
 same scalars and operations.
 
-
 \begin{plExample}{Canonical subspaces of a function space}{}
 \bigskip
 Let $\Set{D}_0 \subset \Set{D}_1$ be a proper subset.
 Consider 
-$\Space{F}_0 = \Space{F} \left[ \Set{D}_0, \Space{V} \right] \}$
+$\Space{F}_0 = \Space{F} \left[ \Set{D}_0, \Space{V} \right] $
 and
-$\Space{F}_1 = \Space{F} \left[ \Set{D}_1, \Space{V} \right] \}$.
+$\Space{F}_1 = \Space{F} \left[ \Set{D}_1, \Space{V} \right] $.
 \end{plExample}
 
 \begin{plExample}{Canonical subspaces of $\Space{R}^n$}{}
@@ -371,14 +373,21 @@ Let $\Vector{v}, \Vector{w} \in \Space{V}$.
 \| \Vector{v} \|^2 \; \equiv \; \Vector{v} \bullet \Vector{v}
 \end{equation}
 
-\item $\theta(\Vector{v},\Vector{w})$ is the angle between $\Vector{v}$ and $\Vector{w}$
+\item $\theta(\Vector{v},\Vector{w})$ 
+is the angle between $\Vector{v}$ and $\Vector{w}$
 and is defined by:
 \begin{eqnarray}
-\Vector{v} \bullet \Vector{w} \; = \; \| \Vector{v} \| \| \Vector{w} \| \cos(\theta(\Vector{v},\Vector{w}))
+\Vector{v} \bullet \Vector{w} 
+\; = \; \| \Vector{v} \| \| \Vector{w} \| 
+\cos(\theta(\Vector{v},\Vector{w}))
 \\
 \theta(\Vector{v},\Vector{w})
 \; \equiv \;
-\cos^{-1} \left(\frac{ \Vector{v} \bullet \Vector{w} }{\| \Vector{v} \| \| \Vector{w} \| } \right)
+\cos^{-1} 
+\left(
+\frac{ \Vector{v} \bullet \Vector{w} }
+{\| \Vector{v} \| \| \Vector{w} \| } 
+\right)
 \nonumber
 \end{eqnarray}
 
@@ -388,9 +397,7 @@ Let $\Vector{v}, \Vector{u} \in \Space{V}, \Vector{w} \in \Space{W}.$
 $\Vector{w} \otimes \Vector{v}$ is a rank 1 linear map
 from $\Space{V}$ to $\Space{W}$, defined by:
 \begin{equation}
-(\Vector{w} \otimes \Vector{v})
-(\Vector{u}) \; \equiv \; \Vector{w} 
-(\Vector{v} \bullet \Vector{u})
+(\Vector{w} \otimes \Vector{v})(\Vector{u}) \; \equiv \; \Vector{w} (\Vector{v} \bullet \Vector{u})
 \end{equation}
 
 Note: this is an abuse of the usual definition of tensor product $\otimes$.
@@ -404,28 +411,20 @@ I want to avoid notations that suggest thinking in terms
 of 'row' and 'column' vectors.
 
 The following is a useful identity.
-If $\Vector{t} \in \Space{T}$, 
-$\Vector{u}, \Vector{v} \in \Space{V}$, 
-and $\Vector{w} \in \Space{W}.$
+If $\Vector{t} \in \Space{T}$, $\Vector{u}, \Vector{v} \in \Space{V}$, and $\Vector{w} \in \Space{W}.$
 then
 \begin{equation}
 \label{eq:tensor-dot}
-(\Vector{t} \otimes \Vector{u}) 
-(\Vector{v} \otimes \Vector{w})(\Vector{u}) 
-= (\Vector{u} \bullet \Vector{v}) (\Vector{t} \otimes \Vector{w})
+(\Vector{t} \otimes \Vector{u}) (\Vector{v} \otimes \Vector{w})(\Vector{u}) = (\Vector{u} \bullet \Vector{v}) (\Vector{t} \otimes \Vector{w})
 \end{equation}
 
 \item Elementary orthogonal projection:
 \begin{equation}
 \Projection_{\Vector{w}} \Vector{v}
 \; \equiv \;
-\left( \frac{ \Vector{w} }{ \| \Vector{w} \| } \otimes 
-\frac{ \Vector{w} }{ \| \Vector{w} \| } \right) \Vector{v}
+\left( \frac{ \Vector{w} }{ \| \Vector{w} \| } \otimes \frac{ \Vector{w} }{ \| \Vector{w} \| } \right) \Vector{v}
 \; = \;
-\left(
-\frac{\Vector{w} }{\|\Vector{w}\|} \bullet \Vector{v} 
-\right) 
-\frac{\Vector{w}}{\|\Vector{w}\|}
+\left( \frac{\Vector{w} }{\|\Vector{w}\|} \bullet \Vector{v} \right) \frac{\Vector{w}}{\|\Vector{w}\|}
 \end{equation}
 
 \item Orthogonal complement:
@@ -436,11 +435,7 @@ then
 \; \equiv \;
 \Vector{v} \; - \; \Projection_{\Vector{w}} \Vector{v}
 \; = \;
-\Vector{v} \; - \; 
-\left( 
-\frac{\Vector{w}}{\|\Vector{w}\|} \bullet \Vector{v} 
-\right) 
-\frac{\Vector{w}}{\|\Vector{w}\|}
+\Vector{v} \; - \; \left( \frac{\Vector{w}}{\|\Vector{w}\|} \bullet \Vector{v} \right) \frac{\Vector{w}}{\|\Vector{w}\|}
 \end{equation}
 
 \end{itemize}
@@ -487,7 +482,7 @@ The real inner product spaces are almost derived from some $\Reals^n$.
 The \textit{range} of $\Vector{f}$, $\range(\Vector{f})$, is the set $\Vector{f}(\Space{V})$,
 which may be a proper subset of its codomain $\Space{W}$.
 The \textit{kernel} of $\Vector{f}$, $\kernel(\Vector{f})$, is the set
-$\kernel(\Vector{f}) = \{ \Vector{v} \in \Space{V} : \Vector{f}(\Vector{v}) = \Vector{0} \}$.
+$\kernel(\Vector{f}) = \left\{ \Vector{v} \in \Space{V} : \Vector{f}(\Vector{v}) = \Vector{0} \right\}$.
 
 When I want to distinguish between real- and vector-valued functions,
 I may use 'function' for vector-valued functions and
@@ -507,13 +502,9 @@ The domains of many interesting functions,
 such as those that depend on vertex positions,
 are direct sum of inner product spaces.
 The \textit{direct sum} $\Space{V} \oplus \Space{W}$ is the inner product space
-consisting of the ordered pairs 
-$\{ (\Vector{v},\Vector{w}) : 
-\Vector{v} \in \Space{V}, \Vector{w} \in \Space{W} \}$
+consisting of the ordered pairs $\left\{ (\Vector{v},\Vector{w}) : \Vector{v} \in \Space{V}, \Vector{w} \in \Space{W} \right\}$
 inheriting the inner product space operations in the obvious way:
-$(\Vector{v}_0,\Vector{w}_0) \bullet (\Vector{v}_1,\Vector{w}_1) 
-= (\Vector{v}_0 \bullet \Vector{v}_1) 
-+ (\Vector{w}_0 \bullet \Vector{w}_1).$
+$(\Vector{v}_0,\Vector{w}_0) \bullet (\Vector{v}_1,\Vector{w}_1) = (\Vector{v}_0 \bullet \Vector{v}_1) + (\Vector{w}_0 \bullet \Vector{w}_1).$
 I will usually write an element of $\oplus^n \Space{V}$ as
 $(\Vector{v}_0,\ldots,\Vector{v}_{n-1})$
 and use
@@ -526,34 +517,27 @@ for a function that depends on $n$ vectors.
 
 A function $\Vector{L}(\Vector{v}):\Space{V} \mapsto \Space{W}$
 is \textit{linear} iff
-$\Vector{L}(a_0 \Vector{v}_0 + a_1 \Vector{v}_1) 
-= a_0 \Vector{L}(\Vector{v}_0) + a_1 \Vector{L}(\Vector{v}_1)$.
-I will often write
- $\Vector{L}\Vector{v} \equiv \Vector{L}(\Vector{v})$.
+$\Vector{L}(a_0 \Vector{v}_0 + a_1 \Vector{v}_1) = a_0 \Vector{L}(\Vector{v}_0) + a_1 \Vector{L}(\Vector{v}_1)$.
+I will often write $\Vector{L}\Vector{v} \equiv \Vector{L}(\Vector{v})$.
 
 It is not hard to see that, for a linear function,
 the range and kernel are linear subspaces of the codomain and
 domain, respectively.
 Thus any linear function between inner product spaces
 divides its domain and codomain each into 2 orthogonal subspaces.
-The domain is divided into 
-$\Space{V} = \kernel(\Vector{L}) \oplus \kernel^{\perp}(\Vector{L})$,
-and the codomain is divided into 
-$\Space{W} = \range(\Vector{L}) \oplus \range^{\perp}(\Vector{L})$.
+The domain is divided into $\Space{V} = \kernel(\Vector{L}) \oplus \kernel^{\perp}(\Vector{L})$,
+and the codomain is divided into $\Space{W} = \range(\Vector{L}) \oplus \range^{\perp}(\Vector{L})$.
 
 The most common representation for linear functions is the \textit{matrix:}
 Let $\Vector{L}(\Vector{v}):\Space{V} \mapsto \Space{W}$ be linear,
-$\{ \Vector{e}_0^{\Space{V}} \ldots  \Vector{e}_{m-1}^{\Space{V}} \}$ 
-an orthonormal basis for $\Space{V}$,
+$\left\{ \Vector{e}_0^{\Space{V}} \ldots  \Vector{e}_{m-1}^{\Space{V}} \right\}$ an orthonormal basis for $\Space{V}$,
 and
-$\{ \Vector{e}_0^{\Space{W}} \ldots \Vector{e}_{n-1}^{\Space{W}} \}$ 
-an orthonormal  basis for $\Space{W}$
+$\left\{ \Vector{e}_0^{\Space{W}} \ldots \Vector{e}_{n-1}^{\Space{W}} \right\}$ an orthonormal  basis for $\Space{W}$
 Then $\Vector{L}$ can be expressed as
 \begin{equation}
 \Vector{L}
  =
-\sum_{i=0}^{m-1} \sum_{j=0}^{n-1} L_{ij}
- ( \Vector{e}_i^{\Space{W}} \otimes \Vector{e}_j^{\Space{V}} )
+\sum_{i=0}^{m-1} \sum_{j=0}^{n-1} L_{ij} ( \Vector{e}_i^{\Space{W}} \otimes \Vector{e}_j^{\Space{V}} )
 \end{equation}
 $(L_{ij})$ is the matrix representation of $\Vector{L}$ with respect to
 the two bases \citeAuthorYearTitle{Halmos:1958:Finite}.
@@ -575,14 +559,14 @@ Examples:
 $\Vector{L} = \sum_{j=0}^{n-1} ( \Vector{c}_j^{\Vector{L}} \otimes \Vector{e}_j^{\Space{V}} )$
 
 $\Vector{c}_j^{\Vector{L}} \in \Space{W}$ are the 'columns' of $\Vector{L}$.
-$\linearspan\{ \Vector{c}_0^{\Vector{L}} \ldots \Vector{c}_{n-1}^{\Vector{L}} \} = \range(\Vector{L})$
+$\linearspan\left\{ \Vector{c}_0^{\Vector{L}} \ldots \Vector{c}_{n-1}^{\Vector{L}} \right\} = \range(\Vector{L})$
 (see \cref{sec:spans-and-projections}).
 
 \item Row-wise:
 $\Vector{L} = \sum_{i=0}^{m-1} ( \Vector{e}_i^{\Space{W}} \otimes  \Vector{r}_i^{\Vector{L}} )$
 
 $\Vector{r}_i^{\Vector{L}} \in \Space{V}$ are the 'rows' of $\Vector{L}$.
-$\linearspan\{ \Vector{r}_0^{\Vector{L}} \ldots \Vector{r}_{m-1}^{\Vector{L}} \} =  \kernel(\Vector{L})^{\perp}$
+$\linearspan\left\{ \Vector{r}_0^{\Vector{L}} \ldots \Vector{r}_{m-1}^{\Vector{L}} \right\} =  \kernel(\Vector{L})^{\perp}$
 (see \cref{sec:spans-and-projections}).
 
 \item Householder:
@@ -602,7 +586,7 @@ indices, say, $[i_0,\ldots,i_n)$.
 A function $\Point{A}(\Vector{v}):\Space{V} \mapsto \Space{W}$
 is \textit{affine} if distributes over affine combinations:
 $\Point{A}(\sum_{i=0}^{n-1} a_i \Vector{v}_i) = \sum_{i=0}^{n-1} a_i \Point{A}(\Vector{v}_i) $
-for all $\{a_i\}$ such that $1 = \sum_{i=0}^{n-1} a_i$.
+for all $\left\{a_i\right\}$ such that $1 = \sum_{i=0}^{n-1} a_i$.
 (Note that I am describing affine functions on vector (linear) spaces,
 rather than the slightly more general notion of affine functions on affine spaces.)
 Any linear function between linear spaces is automatically affine.
@@ -626,9 +610,9 @@ Let $\Space{V}$ be an $n$-dimensional inner product space.
 The \textit{linear span} of a set of $m$ vectors in $\Space{V}$
 is the set of linear combinations of those vectors:
 \begin{equation}
-\linearspan\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \} = \{\Vector{v} \in \Space{V} : \Vector{v} = \sum_{i=0}^{m-1} a_i \Vector{v}_i\}
+\linearspan\left\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \right\} = \left\{\Vector{v} \in \Space{V} : \Vector{v} = \sum_{i=0}^{m-1} a_i \Vector{v}_i\right\}
 \end{equation}
-$\linearspan\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \}$ is a linear subspace of $\Space{V}$.
+$\linearspan\left\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \right\}$ is a linear subspace of $\Space{V}$.
 
 The \textit{projection} $\Projection_{\Set{S}} \Vector{v}$ of a vector $\Vector{v} \in \Space{V}$
 onto an arbitrary subset $\Set{S} \subset \Space{V}$
@@ -637,8 +621,8 @@ Projection onto a linear subspace is a linear function and
 can be computed by summing
 elementary orthogonal projections onto an orthonormal basis for the subspace.
 
-An orthonormal basis for $\linearspan\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \}$
-(and $\linearspan\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \}^\perp$)
+An orthonormal basis for $\linearspan\left\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \right\}$
+(and $\linearspan\left\{ \Vector{v}_0 \ldots \Vector{v}_{m-1} \right\}^\perp$)
 can be computed using the QR decomposition
 of the function $\Vector{V} = \sum_{i=0}^{m-1} \Vector{v}_i \otimes \Vector{e}_i$,
 (the $n \times m$ matrix whose columns are the $\Vector{v}_i$)
@@ -647,13 +631,13 @@ of the function $\Vector{V} = \sum_{i=0}^{m-1} \Vector{v}_i \otimes \Vector{e}_i
 The \textit{affine span} of a set of $m+1$ vectors in $\Space{V}$
 is the set of affine combinations of those vectors:
 \begin{equation}
-\affinespan\{ \Point{p}_0 \ldots \Point{p}_{m} \} = \{\Vector{v} \in \Space{V} : \Vector{v} = \sum_{i=0}^{m} b_i \Point{p}_i;
-1 = \sum_{i=0}^{m} b_i \}.
+\affinespan\left\{ \Point{p}_0 \ldots \Point{p}_{m} \right\} = \left\{\Vector{v} \in \Space{V} : \Vector{v} = \sum_{i=0}^{m} b_i \Point{p}_i;
+1 = \sum_{i=0}^{m} b_i \right\}.
 \end{equation}
-$\affinespan\{ \Point{p}_0 \ldots \Point{p}_{m} \}$ is an affine subspace of $\Space{V}$.
+$\affinespan\left\{ \Point{p}_0 \ldots \Point{p}_{m} \right\}$ is an affine subspace of $\Space{V}$.
 $\Vector{b} = ( b_0 \ldots b_m )$ are \textit{barycentric coordinates}
-for $\Vector{v}$ with respect to $\{ \Point{p}_0 \ldots \Point{p}_{m} \}$.
-The barycentric coordinates are unique if $\{ \Point{p}_0 \ldots \Point{p}_{m} \}$
+for $\Vector{v}$ with respect to $\left\{ \Point{p}_0 \ldots \Point{p}_{m} \right\}$.
+The barycentric coordinates are unique if $\left\{ \Point{p}_0 \ldots \Point{p}_{m} \right\}$
 are affinely independent.
 
 Any affine subspace, $\Space{A}$, of a linear space, $\Space{V}$ can be represented as
@@ -671,11 +655,11 @@ Projection onto an affine space is clearly an affine function.
 We can represent the affine span of a set of $m+1$ vectors
 as a translation of a linear span:
 \begin{equation}
-\affinespan\{ \Point{p}_0 \ldots \Point{p}_{m} \} = \Point{p}_m + \linearspan\{\Vector{v}_0 \ldots \Vector{v}_{m-1}\}
+\affinespan\left\{ \Point{p}_0 \ldots \Point{p}_{m} \right\} = \Point{p}_m + \linearspan\left\{\Vector{v}_0 \ldots \Vector{v}_{m-1}\right\}
 \end{equation}
 where $\Vector{v}_i = \Point{p}_i - \Point{p}_m$,
 which allows us to compute the projection onto
-$\affinespan\{ \Point{p}_0 \ldots \Point{p}_{m} \}$
+$\affinespan\left\{ \Point{p}_0 \ldots \Point{p}_{m} \right\}$
 again using the QR decomposition
 of $\Vector{V} = \sum_{i=0}^{m-1} \Vector{v}_i \otimes \Vector{e}_i$.
 
@@ -686,7 +670,7 @@ of $\Vector{V} = \sum_{i=0}^{m-1} \Vector{v}_i \otimes \Vector{e}_i$.
 
 A convenient definition for the \textit{true inverse}
 of a function $\Vector{f}(\Vector{v}):\Space{V} \mapsto \Space{W}$ is
-$\Vector{f}^{-1}(\Vector{w}) = \{ \Vector{v} : \Vector{f}(\Vector{v}) = \Vector{w} \}$.
+$\Vector{f}^{-1}(\Vector{w}) = \left\{ \Vector{v} : \Vector{f}(\Vector{v}) = \Vector{w} \right\}$.
 The usual definition of inverse treats $\Vector{f}^{-1}$
 as a function from $\Space{W} \mapsto \Space{V}$,
 which is undefined where the value of the true
