--- a/shared/faces.tex
+++ b/shared/faces.tex
@@ -104,12 +104,18 @@ With a face as labeled in \cref{diagram:FaceLabeling},
 the normal points out of the page.)
 
 The {\it area-weighted normal} vector is
-\Normal{n}opagebreak
+\nopagebreak
 \begin{eqnarray}
-\Normal{a} (\Point{p}) & = & (\Point{p}_0 \times \Point{p}_1) \ + \ (\Point{p}_1 \times \Point{p}_2) \ + \ (\Point{p}_2 \times \Point{p}_0) \\
-        & = & (\Point{p}_1 - \Point{p}_0) \ \times \ (\Point{p}_2 - \Point{p}_0) \nonumber \\
-        & = & (\Point{p}_2 - \Point{p}_1) \ \times \ (\Point{p}_0 - \Point{p}_1) \nonumber \\
-        & = & (\Point{p}_0 - \Point{p}_2) \ \times \ (\Point{p}_1 - \Point{p}_2) \nonumber
+\Normal{a} (\Point{p}) 
+& = & (\Point{p}_0 \times \Point{p}_1) 
+\ + \ (\Point{p}_1 \times \Point{p}_2) 
+\ + \ (\Point{p}_2 \times \Point{p}_0) \\
+& = & (\Point{p}_1 - \Point{p}_0) 
+\ \times \ (\Point{p}_2 - \Point{p}_0) \nonumber \\
+& = & (\Point{p}_2 - \Point{p}_1) 
+\ \times \ (\Point{p}_0 - \Point{p}_1) \nonumber \\
+& = & (\Point{p}_0 - \Point{p}_2) 
+\ \times \ (\Point{p}_1 - \Point{p}_2) \nonumber
 \end{eqnarray}
 
 The 'partial' derivatives of the area-weighted normal are:
