--- a/shared/feferman.tex
+++ b/shared/feferman.tex
@@ -22,7 +22,7 @@ Probably more focused on finitism.
 Target general audience.
 
 Background on $3$ of Hilbert's problems
-and effect of G\"{o}del incompleteness theorems.
+and effect of \Godel incompleteness theorems.
 
 Some discussion of constructive approaches, 
 predicative/impredicative, finitary/infinitary.
@@ -130,14 +130,14 @@ What's the difference between $\Set{A} \sim \PowerSet{\Set{A}}$
 ($\card(\Set{A})=\card(\Set{\PowerSet{\Set{A}}})$
  'externally' vs 'internally'?
 
-\textmd{G\"{o}del's incompleteness theorems:}
+\textlb{\Godel's incompleteness theorems:}
 don't follow completely.
 
-\textmd{Postscript on second-order logic:}
+\textlb{Postscript on second-order logic:}
 ``second-order logic cannot be axiomatized effectively.''
 Don't follow much of argument.
 
-\textmd{Elimination of the law of the excluded middle:}
+\textlb{Elimination of the law of the excluded middle:}
 \hfill\break
 LEM implies (for Hilbert) completed infinity (?).
 \hfill\break
@@ -150,12 +150,12 @@ a true statement in HA.
 This (somehow) implies that a finite consistency proof
 of PA would not eliminate completed infinity.
 
-\textmd{The elusiveness of Cantor's continuum problem:}
+\textlb{The elusiveness of Cantor's continuum problem:}
 \hfill\break
 Hilbert's program can't solve the continuum problem.
 
 
-\textmd{New axioms?}
+\textlb{New axioms?}
 \hfill\break
 Dubiousness of large cardinals.
 \hfill\break
@@ -255,24 +255,24 @@ in constructive mathematics between
 
 \end{plSection}%{(7) Reflective expansion of concepts and principles}
 %-----------------------------------------------------------------
-\begin{plSection}{G\"{o}del's life and work}
+\begin{plSection}{\Godel's life and work}
 \label{sec:Godels_life_and_work}
 
-\citeAuthorYearTitle[ch~6 ``G\"{o}del's life and work'']{Feferman:1998:LightOfLogic}
+\citeAuthorYearTitle[ch~6 ``\Godel's life and work'']{Feferman:1998:LightOfLogic}
 
-\end{plSection}%{G\"{o}del's life and work}
+\end{plSection}%{\Godel's life and work}
 %-----------------------------------------------------------------
-\begin{plSection}{Kurt G\"{o}del: conviction and caution}
+\begin{plSection}{Kurt \Godel: conviction and caution}
 \label{sec:Kurt_Godel_conviction_and_caution}
 
 Examines admittedly limited and contradictory evidence
-of G\"{o}del's platonist/realist/objectivist view of
+of \Godel's platonist/realist/objectivist view of
 mathematics: abstract mathematical entities exist outside 
 of anybody's thinking about them;
 undecidable propositions are in fact true or false, we just don't
 know (?).
-Also considers whether G\"{o}del concealed these views and 
-why. \citeAuthorYearTitle[ch~7 ``Kurt G\"{o}del: conviction and caution'']{Feferman:1998:LightOfLogic}
+Also considers whether \Godel concealed these views and 
+why. \citeAuthorYearTitle[ch~7 ``Kurt \Godel: conviction and caution'']{Feferman:1998:LightOfLogic}
 
 Incompleteness theorem uses self-referential statement
 equivalent to [this statement cannot be 
@@ -283,7 +283,7 @@ Self-referential paradoxes 'resolved' by
 B, and so [is a] \ldots statement \ldots in some other 
 language''.~\cite[p~157]{Feferman:1998:LightOfLogic}
 
-G\"{o}del refers to 
+\Godel refers to 
 Tarski \citeAuthorYearTitle{Tarski1944:SemanticTruth,Tarski:1983:LogicEtc} 
 for justification in 1965 version 
 of this work. \citeAuthorYearTitle{Godel:1986:CollectedWorksI}
@@ -308,16 +308,16 @@ sentence.''~\cite[p~159]{Feferman:1998:LightOfLogic}
 
 (Is 'provability' the same as non-halting truth evaluation?)
 
-\end{plSection}%{Kurt G\"{o}del: conviction and caution}
+\end{plSection}%{Kurt \Godel: conviction and caution}
 %-----------------------------------------------------------------
-\begin{plSection}{Introductory note to Kurt G\"{o}del's 1933 lecture}
+\begin{plSection}{Introductory note to Kurt \Godel's 1933 lecture}
 \label{sec:Introductory_note_Godel_1933}
 
-\citeAuthorYearTitle[ch~8 ``Introductory note to Kurt G\"{o}del's 1933 lecture'']{Feferman:1998:LightOfLogic}
+\citeAuthorYearTitle[ch~8 ``Introductory note to Kurt \Godel's 1933 lecture'']{Feferman:1998:LightOfLogic}
 
 See also \citeAuthorYearTitle{Godel:1995:CollectedWorksIII}.
 
-\end{plSection}%{Introductory note to Kurt G\"{o}del's 1933 lecture}
+\end{plSection}%{Introductory note to Kurt \Godel's 1933 lecture}
 %-----------------------------------------------------------------
 \begin{plSection}{What does logic have to tell us about mathematical proofs?}
 \label{sec:What_does_logic_tell_us_about_proofs}
@@ -352,7 +352,7 @@ in Feferman's $T_0$ \citeAuthorYearTitle{Feferman:1975:ExplicitMathematics}
 \citeAuthorYearTitle[ch~10 ``What rests on what? 
 The proof-theoretic analysis of mathematics'']{Feferman:1998:LightOfLogic}
 
-``G\"{o}del \ldots\ showed that PA [Peano arithmetic]
+``\Godel \ldots\ showed that PA [Peano arithmetic]
 could be translated into the intuitionistic system HA of
 Heyting's arithmetic,
 which differs from PA on in omitting the 
@@ -360,13 +360,13 @@ Law of the Excluded Middle{\ldots}.''~\cite[190]{Feferman:1998:LightOfLogic}
 
 \end{plSection}%{What rests on what? The proof-theoretic analysis of mathematics}
 %-----------------------------------------------------------------
-\begin{plSection}{G\"{o}del's \textit{Dialectica} interpretation and its two-way-stretch}
+\begin{plSection}{\Godel's \textit{Dialectica} interpretation and its two-way-stretch}
 \label{sec:Godels_Dialectica_interpretation}
 
-\citeAuthorYearTitle[ch~11 ``G\"{o}del's \textit{Dialectica} interpretation and its
+\citeAuthorYearTitle[ch~11 ``\Godel's \textit{Dialectica} interpretation and its
 two-way-stretch'']{Feferman:1998:LightOfLogic}
 
-\end{plSection}%{G\"{o}del's \textit{Dialectica} interpretation and its two-way-stretch}
+\end{plSection}%{\Godel's \textit{Dialectica} interpretation and its two-way-stretch}
 %-----------------------------------------------------------------
 \begin{plSection}{Infinity in mathematics: is Cantor necessary? (conclusion)}
 \label{sec:Cantor_necessary_conclusion}
@@ -382,17 +382,17 @@ $\forall x (F(n) = 0)$ where $F$ is primitive recursive.
 $\exists x (F(n) \neq 0)$ (negations of statement in $\Pi^0_1$).
 \item[$\Pi^0_k$] sequence of $k$ alternating quantifiers,
 starting with $\forall x$.
-\textmd{(Why alternating?)}
+\textlb{(Why alternating?)}
 \item[$\Sigma^0_k$] sequence of $k$ alternating quantifiers,
 starting with $\exists x$.
-\textmd{(Why alternating?)}
+\textlb{(Why alternating?)}
 \item[$\Delta^0_k$] statements that are in both $\Pi^0_k$
 and $\Sigma^0_k$. 
-\textmd{(How is that possible?)}
+\textlb{(How is that possible?)}
 \end{description}
 Superscript $0$ is above classes refers to the fact that
 quantified variables range over $x,y,\ldots \in \Space{N}$.
-\textmd{(first order logic/arithmetic?)}
+\textlb{(first order logic/arithmetic?)}
 When we add variables $X,Y,\ldots \subseteq \Space{N}$,
 then the classes are $\Pi^1_k, \Sigma^1_k, \Delta^1_k$.
 
@@ -409,7 +409,7 @@ Collecting all arities into a single class:
 \exists X \forall n \left[ (n \in X) \Leftrightarrow P(n) \right]
 \end{equation}
 where $\mathcal{F}$ is a class of formulas 
-\textmd{(meaning $\Pi^0_k$ or $\Sigma^0_k$?)}
+\textlb{(meaning $\Pi^0_k$ or $\Sigma^0_k$?)}
 and $P \in \mathcal{F}$.
 
 For formulas in $\mathcal{F}$ and its complement,
@@ -420,7 +420,7 @@ For formulas in $\mathcal{F}$ and its complement,
 \exists X \forall n \left[ (n \in X) \Leftrightarrow P(n) \right]
 \end{equation}
 where $P \in \mathcal{F}$ and $\sim Q \in \mathcal(F)$.
-\textmd{
+\textlb{
 (Is ``$\sim Q$'' the same as ``$\lnot Q$'', ie, 
 ``$(\text{not}\, Q)$''?)}
 
