--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -28,48 +28,111 @@
 
 \begin{plSection}{Fonts}
 
-...\\
-\textsc{
+% TODO: command that maps face abbrev's to lines of text. 
+\textxl{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
-}
-\textrm{
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\textli{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
-}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
 \textmd{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
-}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
 \textsb{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
-}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
 \textbf{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\
-}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\textxb{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+ \\
+\textsc{\textxl{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
+\textsc{\textli{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
+\textsc{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\textsc{\textmd{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
+\textsc{\textsb{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
+\textsc{\textbf{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
+\textsc{\textxb{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
+ \\
 \textit{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\right\}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
 \textsl{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\right\}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\textsl{\textxl{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsl{\textli{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsl{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\textsl{\textmd{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsl{\textsb{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsl{\textxb{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsl{\textxb{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+ \\
+\textsf{\textxl{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsf{\textli{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
 \textsf{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\right\}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\textsf{\textmd{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsf{\textsb{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsf{\textxb{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+\textsf{\textxb{
+The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+ \\
 \textsf{\textsl{
 The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\right\}}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
 \textsf{\textit{
 The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\right\}}
-\textsf{\textbf{
-The correct official (quick) brown fox jumps over the lazy dog. [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\right\}}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG. [0123456789].\\ }}
+ \\
 \texttt{
 The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
-THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\right\}
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }
+\texttt{\textsl{
+The correct official (quick) brown fox jumps over the lazy dog [0123456789].\\
+THE CORRECT OFFICIAL (QUICK) BROWN FOX JUMPS OVER THE LAZY DOG [0123456789].\\ }}
 
 
 See 
