--- a/tests/unimath-symbols-more.ltx
+++ b/tests/unimath-symbols-more.ltx
@@ -4,7 +4,8 @@
 %!TEX TS-program = LuaLaTeX
 
 % palisades-lakes 2021-02-25
-% add more fonts to makme it easy to compare
+% add more fonts 
+% landscape to make it easy to compare
 
 %%%%%%%%%%%%%%%%%%%%%%%
 % SYMBOLS DEFINED BY UNICODE-MATH
@@ -18,6 +19,8 @@ metalogo,textcomp,longtable,tabu,hyperref}
 
 \geometry{margin=2cm,landscape=true,paperheight=352mm,paperwidth=198mm,}
 \hypersetup{colorlinks,linkcolor=black}
+
+\usepackage{enumitem}
 
 \def\cmd#1{\texttt{\textbackslash\expandafter\@gobble\string#1}}
 
@@ -57,24 +60,27 @@ metalogo,textcomp,longtable,tabu,hyperref}
 \ExplSyntaxOff
 
 % https://tex.stackexchange.com/questions/425098/which-opentype-math-fonts-are-available
-\defmathfont{asana}{Asana Math}{880000}{A}
-\defmathfont{cambria}{Cambria Math}{008800}{C}
-\defmathfont{erewhon}{Erewhon Math}{442222}{E}
-\defmathfont{fira}{Fira Math}{000088}{F}
-\defmathfont{garam}{Garamond-Math}{663333}{G}
-\defmathfont{gfsnh}{GFS Neohellenic Math}{666600}{H}
-\defmathfont{kp}{KP Math}{224422}{K}
-\defmathfont{lm}{Latin Modern Math}{444444}{L}
-\defmathfont{liber}{Libertinus Math}{006666}{I}
-\defmathfont{ncm}{NewCMMath-Regular}{444444}{N}
-\defmathfont{stix}{STIX Two Math}{00AA22}{S}
-\defmathfont{xits}{XITS Math}{2200AA}{X}
+\defmathfont{asana}{Asana-Math.otf}{660000}{AS}
+\defmathfont{cambria}{Cambria Math}{006600}{CA} % Windows proprietary
+\defmathfont{erewhon}{Erewhon-Math.otf}{441111}{ER}
+\defmathfont{fira}{FiraMath-Regular.otf}{000088}{FI}
+\defmathfont{garam}{Garamond-Math.otf}{112233}{GA}
+\defmathfont{gfsnh}{GFSNeohellenicMath.otf}{442200}{GF}
+\defmathfont{kr}{KPMath-Regular.otf}{224422}{KR}
+\defmathfont{ks}{KPMath-Sans.otf}{224422}{KS}
+\defmathfont{lm}{latinmodern-math.otf}{222222}{LA}
+\defmathfont{liber}{LibertinusMath-Regular.otf}{003333}{LI}
+\defmathfont{ncmr}{NewCMMath-Regular.otf}{331144}{NR}
+\defmathfont{ncmb}{NewCMMath-Book.otf}{331144}{NB}
+\defmathfont{stix}{STIXTwoMath-Regular.otf}{006622}{ST}
+\defmathfont{xitsr}{XITSMath-Regular.otf}{2200AA}{XR}
+\defmathfont{xitsb}{XITSMath-Bold.otf}{2200AA}{XB}
 
-\defmathfont{bonum}{TeX Gyre Bonum Math}{AA0044}{B}
-\defmathfont{dejavu}{TeX Gyre DejaVu Math}{AA0044}{D}
-\defmathfont{pagella}{TeX Gyre Pagella Math}{AA0044}{P}
-\defmathfont{schola}{TeX Gyre Schola Math}{AA0044}{O}
-\defmathfont{termes}{TeX Gyre Termes Math}{AA0044}{T}
+\defmathfont{bonum}{texgyrebonum-math.otf}{880044}{TB}
+\defmathfont{dejavu}{texgyredejavu-math.otf}{880044}{TD}
+\defmathfont{pagella}{texgyrepagella-math.otf}{880044}{TP}
+\defmathfont{schola}{texgyreschola-math.otf}{880044}{TO}
+\defmathfont{termes}{texgyretermes-math.otf}{880044}{TT}
 
 \def\INPUT{\input{unicode-math-table.tex}}
 \def\TABLE{%
@@ -84,8 +90,8 @@ metalogo,textcomp,longtable,tabu,hyperref}
   \textsc{usv} & %
   \Lasana & \Lcambria & \Lerewhon & \Lfira & %
   \Lgaram & \Lgfsnh & %
-  \Lkp & \Llm & \Lliber & \Lncm & %
-  \Lstix & \Lxits & %
+  \Lkr & \Lks & \Llm & \Lliber & \Lncmr &  \Lncmb & %
+  \Lstix & \Lxitsr & \Lxitsb & %
   \Lbonum & \Ldejavu & \Lpagella  & \Lschola & \Ltermes & %
   Macro & Description \\
   \midrule \endhead
@@ -121,11 +127,14 @@ metalogo,textcomp,longtable,tabu,hyperref}
       \SYMB{#2}{garam}{#1} &
       \SYMB{#2}{gfsnh}{#1} &
       \SYMB{#2}{lm}{#1} &
-      \SYMB{#2}{kp}{#1} &
+      \SYMB{#2}{kr}{#1} &
+      \SYMB{#2}{ks}{#1} &
       \SYMB{#2}{liber}{#1} &
-      \SYMB{#2}{ncm}{#1} &
+      \SYMB{#2}{ncmr}{#1} &
+      \SYMB{#2}{ncmb}{#1} &
       \SYMB{#2}{stix}{#1} &
-      \SYMB{#2}{xits}{#1} &
+      \SYMB{#2}{xitsr}{#1} &
+      \SYMB{#2}{xitsb}{#1} &
       \SYMB{#2}{bonum}{#1} &
       \SYMB{#2}{dejavu}{#1} &
       \SYMB{#2}{pagella}{#1} &
@@ -202,30 +211,41 @@ to print every symbol defined by the \textsf{unicode-math}
 package.
 Use this document to find the command name or the Unicode glyph slot for a symbol that you wish to use.
 The following fonts are shown: (with approximate symbol counts)
-\begin{itemize}
+
+Symbols defined in Plain \TeX\ are indicated with {\color[gray]{0.6} \textsuperscript{\sffamily (p)}} after their macro name.
+\LaTeX\ follows Plain \TeX, but defines a handful more, indicated with {\color[gray]{0.6} \textsuperscript{\sffamily (l)}}.
+Symbols defined in \textsf{amssymb} are indicated with {\color[gray]{0.6} \textsuperscript{\sffamily (a)}}.
+
+% Note that this list of fonts is not intended to be exhaustive 
+% but I am happy to add new fonts by request 
+% if they are distributed in
+%  \TeX\ Live.\footnote{Only a single \TeX\ Gyre Math font is shown 
+%  here by design as they all largely have the same symbol coverage.}
+
+\newpage
+\begin{itemize}[noitemsep]
 \item[\Lasana] \mathversion{asana} $\mathup{Asana\ Math}$ (\ref{count:asana})
 \item[\Lcambria] \mathversion{cambria} $\mathup{Cambria\ Math}$ (\ref{count:cambria})
 \item[\Lerewhon] \mathversion{erewhon} $\mathup{Erewhon\ Math}$ (\ref{count:erewhon})
 \item[\Lfira] \mathversion{fira} $\mathup{Fira\ Math}$ (\ref{count:fira})
 \item[\Lgaram] \mathversion{garam} $\mathup{Garamond\mathhyphen Math}$ (\ref{count:garam})
 \item[\Lgfsnh] \mathversion{gfsnh} $\mathup{GFS\ Neohellenic\ Math}$ (\ref{count:gfsnh})
-\item[\Lkp] \mathversion{kp} $\mathup{KP\ Math}$ (\ref{count:kp})
+\item[\Lkr] \mathversion{kr} $\mathup{KP\ Math\ Regular}$ (\ref{count:kr})
+\item[\Lks] \mathversion{ks} $\mathup{KP\ Math\ Sans}$ (\ref{count:ks})
 \item[\Llm] \mathversion{lm} $\mathup{Latin\ Modern\ Math}$ (\ref{count:lm})
 \item[\Lliber] \mathversion{lm} $\mathup{Libertinus\ Math}$ (\ref{count:liber})
-\item[\Lncm] \mathversion{ncm} $\mathup{New\ Computer\ Modern\ Math}$ (\ref{count:ncm})
+\item[\Lncmr] \mathversion{ncmr} $\mathup{New\ Computer\ Modern\ Math\ Regular}$ (\ref{count:ncmr})
+\item[\Lncmb] \mathversion{ncmb} $\mathup{New\ Computer\ Modern\ Math\ Book}$ (\ref{count:ncmb})
 \item[\Lstix] \mathversion{stix} $\mathup{STIX\ Two\ Math}$ (\ref{count:stix})
-\item[\Lxits] \mathversion{xits} $\mathup{XITS\ Math}$ (\ref{count:xits})
+\item[\Lxitsr] \mathversion{xitsr} $\mathup{XITS\ Math\ Regular}$ (\ref{count:xitsr})
+\item[\Lxitsb] \mathversion{xitsb} $\mathup{XITS\ Math\ Bold}$ (\ref{count:xitsb})
 \item[\Lbonum] \mathversion{bonum} $\mathup{TeX\ Gyre\ Bonum\ Math}$ (\ref{count:bonum})
 \item[\Ldejavu] \mathversion{dejavu} $\mathup{TeX\ Gyre\ DejaVu\ Math}$ (\ref{count:dejavu})
 \item[\Lpagella] \mathversion{pagella} $\mathup{TeX\ Gyre\ Pagella\ Math}$ (\ref{count:pagella})
 \item[\Lschola] \mathversion{schola} $\mathup{TeX\ Gyre\ Schola\ Math}$ (\ref{count:schola})
 \item[\Ltermes] \mathversion{termes} $\mathup{TeX\ Gyre\ Termes\ Math}$ (\ref{count:termes})
 \end{itemize}
-Symbols defined in Plain \TeX\ are indicated with {\color[gray]{0.6} \textsuperscript{\sffamily (p)}} after their macro name.
-\LaTeX\ follows Plain \TeX, but defines a handful more, indicated with {\color[gray]{0.6} \textsuperscript{\sffamily (l)}}.
-Symbols defined in \textsf{amssymb} are indicated with {\color[gray]{0.6} \textsuperscript{\sffamily (a)}}.
-
-Note that this list of fonts is not intended to be exhaustive but I am happy to add new fonts by request if they are distributed in \TeX\ Live.\footnote{Only a single \TeX\ Gyre Math font is shown here by design as they all largely have the same symbol coverage.}
+\newpage
 
 \tableofcontents
 
